# test_wave

./: .continueignore  .gitignore  .upstream_esp_lcd_ili9881c.c  .windsurfrules  260319_LANGUAGE_ISSUES.md  CMakeLists.txt  Doxyfile  MDB-commands.md  ModelFile  NEXT_STEPS.md  README.md  app_version.h  idf_component.yml  index.html  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.SCANNER  server_body.json  spltting.md  stringhe_da_tradurre.csv  stringhe_output.csv  udp_bridge.py
.github/: copilot-instructions.md
app/: init.c
components/audio_player/: CMakeLists.txt  audio_player.c
components/aux_gpio/: CMakeLists.txt  aux_gpio.c
components/cctalk/: CMakeLists.txt  cctalk.c  cctalk_driver.c
components/device_activity/: CMakeLists.txt  device_activity.c  device_activity.h
components/device_config/: CMakeLists.txt  device_config.c  idf_component.yml
components/digital_io/: CMakeLists.txt  digital_io.c
components/eeprom_24lc16/: CMakeLists.txt  eeprom_24lc16.c
components/error_log/: CMakeLists.txt  error_log.c
components/http_services/: CMakeLists.txt  http_services.c  keepalive_task.c
components/io_expander/: CMakeLists.txt  io_expander.c
components/io_expander/include/: io_expander.h
components/io_expander/test/: io_expander_test.c  io_expander_test.h
components/led/: CMakeLists.txt  led.c
components/led_control/: CMakeLists.txt  idf_component.yml  led_control.c
components/lvgl_panel/: CMakeLists.txt  DroidSansBold24.c  DroidSansBold32.c  DroidSansMono18.c  DroidSansMono24.c  GoogleSans140.c  GoogleSans35.c  GoogleSans40.c  GoogleSans50.c  GoogleSans70.c  arial96.c  language_flags.c  lvgl_i18n.c  lvgl_i18n.h  lvgl_page_ads.c  lvgl_page_chrome.c  lvgl_page_language.c  lvgl_page_language_2.c  lvgl_page_main.c  lvgl_page_main.c.bak2  lvgl_page_out_of_service.c  lvgl_page_programmi copy.c  lvgl_page_programmi.c  lvgl_page_programs_v2.c  lvgl_panel.c  program_repeat_icon.c  sevensegments_300.c
components/lvgl_panel/include/: embedded_icons.h  embedded_icons_images.h  language_flags.h  lvgl_page_chrome.h  lvgl_panel.h  lvgl_panel_pages.h  program_repeat_icon.h
components/lvgl_panel/src/: embedded_icons.c  embedded_icons_stub.c
components/mdb/: CMakeLists.txt  mdb.c  mdb_cashless.c
components/mdb_bus/: CMakeLists.txt  mdb_bus.c
components/modbus_relay/: CMakeLists.txt  idf_component.yml  (+1 more)
components/sht40/: CMakeLists.txt  sht40.c
components/sht40/include/: sht40.h
components/web_ui/: CMakeLists.txt  idf_component.yml  web_ui.c  web_ui_api.c  web_ui_auth_emulator.c  web_ui_common.c  web_ui_file_manager.c  web_ui_home.c  web_ui_internal.h  web_ui_logs.c  web_ui_logs_component.c  web_ui_pages.c  web_ui_pages_runtime.c  web_ui_programs.c  web_ui_programs_page.c  web_ui_reboot.c  web_ui_register.c  web_ui_server.c  web_ui_test_api.c  web_ui_test_pages.c  webpages.c  webpages_embedded.c  webpages_embedded.h
components/web_ui/include/: web_ui.h  web_ui_profile.h  web_ui_programs.h
data/: .gitkeep  activity.json  config.jsn  config0.jsn  i18n_compare_en.md  i18n_compare_it.md  i18n_de.json  i18n_de.json.bak  i18n_en.json  i18n_en.map.json  i18n_en_sync.json  i18n_es.json  i18n_fr.json  i18n_fr.json.bak  i18n_fr.map.json  i18n_it.json  i18n_it.json.bak  i18n_it.map.json  i18n_it_sync.json  i18n_v2.json  programs.json  tasks.csv  tasks.json
docs/: 01_ANALISI_E_RAZIONALIZZAZIONE_MDB.md  02_PIANO_SCANNER_ALWAYS_ON.md  03_REGOLE_CREDITI_E_PAGAMENTI.md  04_EPAPER_USB_SERIAL_PROTOCOL_INTEGRAZIONE.md  260320 LOG.md  ANALISI_TODO_PUNTO_5_EPAPER_OPERAZIONI.md  AZIONI_MESSAGGI.md  CHANGELOG_20260315_i18n_v2_refactor.md  CHANGES_SESSION_040826.md  COMPILE_FLAGS.md  COMPONENT_CACHING_AUDIT.md  CONFIG_EEPROM_MINIMIZATION.md  FLUSSI.md  FSM.md  IO_MAP.md  IPOTESI_REFACT_LOCALIZZIONE.md  LCD_TIMING_TUNING_7INCH_A.md  LOCALIZATION.md  LOCALIZATION_GUIDE.md  LVGL_PAGES.md  MDB_IMPLEMENTATION.md  MDB_IMPLEMENTATION_REFERENCE.md  MESSAGES.md  MESSSAGES.md  ModBus.md  NOTES_HW.md  PIANO_EPAPER_USBCDC.md  PINOUT.md  PNG_icons_implementation.md  RAPPORTO_PAGAMENTO_ATTIVAZIONI.md  README.md  REFACTORING_JSON.md  RULES.md  SCRIPTS.md  SEQUENZA_BOOT.md  TABELLA FLUSSI AZIONI.md  TABELLA_PROGRAMMI.md  TASKS.md  TMP_SESSION_2026-03-19_ECD_STOP.md  TODO.md  (+43 more)
factory/: CMakeLists.txt  Kconfig.projbuild  app_version.h  fsm.c  init.c  init.h  main.c  tasks.c  tasks.h
i18n_editor/: package-lock.json  package.json  run.bat  run.sh  translator_config.json
main/: CMakeLists.txt  Kconfig.projbuild  app_version.h  fsm.c  fsm.h  idf_component.yml  init.c  init.h  main.c  main.h  tasks.c  tasks.h
main/spiffs/: tasks.csv
partition_table/: partitionTable.csv
report/: unused_functions.txt
scripts/: Version_bundle.sh  add_doxygen_templates.sh  api_test_all.py  api_test_report_20260323_120751.json  c_files_report.md  c_functions_report.md  compare_i18n.py  convert_i18n_compact.py  crash_bundle.sh  dgen.py  embed_icons.sh  export_embedded_pages.py  extract_inline_js_v2.py  find_c_files.py  flash_all.sh  flash_factory.sh  flash_factory_ota.sh  flash_full_image.bat  flash_full_image.py  flash_ota.bat  flash_ota0.sh  flash_ota1.sh  flash_spiffs.sh  generate_doxygen.sh  generate_i18n_json_from_header.py  generate_i18n_sync.py  generate_language_flags.py  generate_language_models.py  generate_slideshow_images.py  json_naming_compact.md  login_test.py  migrate_i18n_v2_page.py  remove_lang_from_i18n.py  search_strings.py  select_boot_partition.sh  switch_to_factory.sh  switch_to_production.sh  sync_to_mh1001.sh  test_httpservices.py  test_httpservices_curl.sh  (+1 more)
(+229 files in other folders)
